traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:7: error: not found: value setPose
  if(a){if(x+1>getMondeLargeur()){setPose(x,y+1);return false}
                                  ^TraversalZigZag:8: error: not found: value setPose
       setPose(x+1,y);return true}
       ^TraversalZigZag:9: error: not found: value setPose
  if(x==0){setPose(0,y+1);return true}
           ^TraversalZigZag:10: error: not found: value setPose
  setPose(x-1,y)
  ^TraversalZigZag:18: error: value a is not a member of object Boolean
  Boolean a=true 
          ^TraversalZigZag:21: error: not found: value a
     a=avanceCrois(a)}while(!estPosiFin())
     ^